# koloss-v2

./: .gitignore  ANALYSIS.md  ARCHITECTURE.md  CHANTIERS.md  Cargo.toml  README.md  ROADMAP.md  VISION.md
src/: lib.rs  main.rs
src/bench/: arc.rs  mod.rs  runner.rs
src/core/: error.rs  mod.rs  types.rs
src/memory/: analogy.rs  binary.rs  compress.rs  graph.rs  mod.rs
src/perception/: code.rs  grid.rs  mod.rs
src/reasoning/: builtins.rs  mod.rs  rules.rs  search.rs  solver.rs  unifier.rs
src/self_improve/: fitness.rs  mod.rs  mutator.rs
src/synthesis/: abstraction.rs  adaptive.rs  bidir.rs  cellular.rs  compression.rs  connect.rs  dsl.rs  enumerate.rs  evolve.rs  fingerprint.rs  heuristics.rs  mod.rs  object_ops.rs  partition.rs  reasoning_bridge.rs  smart_prims.rs
